spacing issue

--- a/src/app/pages/product/product.component.scss
+++ b/src/app/pages/product/product.component.scss
@@ -721,8 +721,8 @@
     .prod-detail {
         padding: 5px 15px 15px;
         background: white;
-        heading-3 {
-            padding-left: 15px;
+        .heading-3 {
+            padding-bottom:5px;
         }
         p {
             font-size: $large-font;
@@ -753,6 +753,9 @@
         &.detail-videos{
             border-top:1px solid $border-color;
             padding: 5px 15px 15px;
+            .heading-3 {
+                padding-bottom:10px;
+            }
         }
     }
     .prod-services {
